@@ -2,16 +2,23 @@
 <h3>{tr}Add a new group{/tr}</h3>
 <form action="tiki-admingroups.php" method="post">
 <table class="normal">
-<tr><td class="formcolor">{tr}Group{/tr}:</td><td class="formcolor"><input type="text" name="name" /></td></tr>
-<tr><td class="formcolor">{tr}Desc{/tr}:</td><td class="formcolor"><textarea rows="5" cols="20" name="desc"></textarea></td></tr>
+<tr><td class="formcolor">{tr}Group{/tr}:</td><td class="formcolor"><input type="text" name="name" value="{$groupname}" /></td></tr>
+<tr><td class="formcolor">{tr}Desc{/tr}:</td><td class="formcolor"><textarea rows="5" cols="20" name="desc">{$groupdesc}</textarea></td></tr>
 <tr><td class="formcolor">{tr}Include{/tr}:</td><td class="formcolor">
 <select name="include_groups[]" multiple="multiple" size="4">
 {section name=ix loop=$users}
-<option value="{$users[ix].groupName}">{$users[ix].groupName}</option>
+{assign var="inced" value="$users[ix].groupName"}
+<option value="{$inced}" {if $inc.$inced eq 'y'} selected="selected"{/if}>{$inced}</option>
 {/section}
 </select>
 </td></tr>
+{if $group ne ''}
+<tr><td  class="formcolor">&nbsp;
+<input type="hidden" name="olgroup" value="{$group}">
+</td><td  class="formcolor"><input type="submit" name="save" value="{tr}Save{/tr}" /></td></tr>
+{else}
 <tr><td  class="formcolor">&nbsp;</td><td  class="formcolor"><input type="submit" name="newgroup" value="{tr}Add{/tr}" /></td></tr>
+{/if}
 </table>
 </form>
 <br/><br/>
@@ -36,45 +43,26 @@
 <td class="heading">{tr}Permissions{/tr}</td>
 <td class="heading">{tr}action{/tr}</td>
 </tr>
+{cycle values="odd,even" print=false}
 {section name=user loop=$users}
-{if $smarty.section.user.index % 2}
 <tr>
-<td class="odd">{$users[user].groupName}</td>
-<td class="odd">{$users[user].groupDesc}</td>
-<td class="odd">
+<td class="{cycle advance=false}">{$users[user].groupName}</td>
+<td class="{cycle advance=false}">{$users[user].groupDesc}</td>
+<td class="{cycle advance=false}">
 {section name=ix loop=$users[user].included}
 {$users[user].included[ix]}<br/>
 {/section}
 </td>
-<td class="odd">
+<td class="{cycle advance=false}">
 {section name=grs loop=$users[user].perms}
 {$users[user].perms[grs]}(<a class="link" href="tiki-admingroups.php?offset={$offset}&amp;sort_mode={$sort_mode}&amp;permission={$users[user].perms[grs]}&amp;group={$users[user].groupName}&amp;action=remove">x</a>)&nbsp;
 {/section}
 </td>                                 
-<td class="odd"><a class="link" href="tiki-admingroups.php?offset={$offset}&amp;sort_mode={$sort_mode}&amp;action=delete&amp;group={$users[user].groupName}">{tr}delete{/tr}</a>
-                                   <a class="link" href="tiki-assignpermission.php?group={$users[user].groupName}">{tr}assign_perms{/tr}</a></td>
+<td class="{cycle}">
+<a class="link" href="tiki-admingroups.php?offset={$offset}&amp;sort_mode={$sort_mode}&amp;action=delete&amp;group={$users[user].groupName}">{tr}delete{/tr}</a>
+<a class="link" href="tiki-assignpermission.php?group={$users[user].groupName}">{tr}assign_perms{/tr}</a>
+<a class="link" href="tiki-admingroups.php?group={$users[user].groupName}">{tr}edit{/tr}</a></td>
 </tr>
-{else}
-<tr>
-<td class="even">{$users[user].groupName}</td>
-<td class="even">{$users[user].groupDesc}</td>
-<td class="even">
-{section name=ix loop=$users[user].included}
-{$users[user].included[ix]}<br/>
-{/section}
-</td>
-
-<td class="even">
-{section name=grs loop=$users[user].perms}
-{$users[user].perms[grs]}(<a class="link" href="tiki-admingroups.php?offset={$offset}&amp;sort_mode={$sort_mode}&amp;permission={$users[user].perms[grs]}&amp;group={$users[user].groupName}&amp;action=remove">x</a>)&nbsp;
-{/section}
-</td>                                 
-
-<td class="even"><a class="link" href="tiki-admingroups.php?offset={$offset}&amp;sort_mode={$sort_mode}&amp;action=delete&amp;group={$users[user].groupName}">{tr}delete{/tr}</a>
-                 <a class="link" href="tiki-assignpermission.php?group={$users[user].groupName}">{tr}assign_perms{/tr}</a></td>
-
-</tr>
-{/if}
 {/section}
 </table>
 <br/>
